--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="countries">Countries</string>
     <string name="lang">Languages</string>
     <string name="search">Search News</string>
+    <string name="proceed">Proceed</string>
 
 </resources>
