Implement UI test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="lang">Languages</string>
     <string name="search">Search News</string>
     <string name="proceed">Proceed</string>
+    <string name="loading">Loading</string>
 
 </resources>
